# offnet

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py  demo.py
offnet/: __init__.py  core.py
offnet/chat/: __init__.py  gloff_chat.py
offnet/sites/: site_base.py  sites_registry.py  wikipedia.py
offnet/tools/: __init__.py  calculator.py  notes.py  translator.py  weather.py
offnet/utils/: storage.py
scripts/: mass_parser.py  update_content.py
